# cfd2vec

./: .gitignore  Analysis.ipynb  README.md  embed_graphs.py  extract_graphs.sh  extract_vectors.sh  get_new_vectors.sh  get_vectors.sh  graphgen  link_to_repo.txt  min_rmse_models.csv  naive_vectors.py  performance.csv  performance_graphs.xlsx  requirements.txt  rmse_csv.csv  rsync_exclude.txt  saved_models  testgraphgen  visualize_vectors.ipynb
Analysis/: Analysis.ipynb
CheckCompilation/: build.gradle  settings.gradle
CheckCompilation/src/main/java/edu/ncsu/edm/doesitcompile/: CodeState.java  DoesItCompile.java
GraphGenerator/: settings.gradle
GraphGenerator/app/: build.gradle
GraphGenerator/app/src/main/java/edu/ncsu/edm/graphgenerator/: App.java  AstToGraphConverter.java  CanonicalizationConverter.java  CodeState.java  CondExprToIfConverter.java  FindStaticNamesVisitor.java  FlowEdge.java  FlowNode.java  NodeUtils.java  VariableCanonicalizationConverter.java
analysis/: Analysis.ipynb  attention_training.ipynb  code2vec_vectors.csv  min_rmse_models.csv  requirements.txt  rmse_csv.csv  view_db_graphs.ipynb  visualize_vectors.ipynb
analysis/models/: NodeLoader.py
cfg_generator/: .gitignore  Cargo.toml
cfg_generator/cfg_generator/: Cargo.toml  build.rs  example.env  logging.yml  schema.sql
cfg_generator/cfg_generator/queries/: edge.sql  graph.sql  node.sql  program.sql
cfg_generator/cfg_generator/src/: lib.rs  main.rs
cfg_generator/cfg_generator/src/capnp/: ast_node.rs  message.rs  message_capnp.rs  mixins.rs  mod.rs
cfg_generator/cfg_generator/src/cfg/: ast_processor.rs  blocks.rs  cfg_node.rs  decisions.rs  errors.rs  mod.rs
cfg_generator/cfg_generator/src/db/: cornucopia.rs  mod.rs
cfg_generator/cfg_generator/src/messages/: ast_node.rs  message.rs  mixins.rs  mod.rs
cfg_generator/cfg_generator/src/server/: error.rs  message_processing.rs  mod.rs
cfg_generator/fuzz/: Cargo.toml
cfg_generator/fuzz/fuzz_targets/: fuzz_sized_data_codec.rs
cfg_generator/fuzz/src/: main.rs
cfg_generator/petgraph-graph-tool/: Cargo.toml  README.md
cfg_generator/petgraph-graph-tool/src/: lib.rs
cfg_generator/petgraph-graph-tool/src/attr_types/: mod.rs
cfg_generator/petgraph-graph-tool/tests/: empty.gt  graph-tool.rs  gt.gt  gt_bin_gen.py  gt_test_reading.py  petgraph.gt  version_numbers.rs
cfg_generator/petgraph-graphml/src/: lib.rs
cfg_generator/read_afl_crashes/: Cargo.toml
cfg_generator/read_afl_crashes/src/: main.rs
cfg_generator/src/: main.rs
cfg_generator/src/codec/: mod.rs
cfg_generator/src/messages/: astnode.rs  message.rs  mixins.rs  mod.rs
embed/: .gitignore  Dockerfile  c2v_gen_data.py  embed_graphs.py  naive_vectors.py  profile.html  profile.json  requirements.txt  test.py
embed/embed_methods/: README.md
embed/embed_methods/ge/: __init__.py  alias.py  read_graph.py  utils.py  walker.py
embed/embed_methods/ge/models/: __init__.py  deepwalk.py  line.py  node2vec.py  sdne.py  struc2vec.py
embed/embed_methods/readers/: __init__.py  graph_reader.py
embed_methods/: README.md  deepwalk_wiki.py  setup.py
embed_methods/code2vec_spencer/code2vec/: .gitignore  Input.java  code2vec_error.txt  common.py  config.py  errorfile.txt  get_vectors.sh  interactive_predict.py  model_base.py  path_context_reader.py  preprocess.py  preprocess.sh  remove_ids.py  tensorflow_model.py  test.java  train.sh  vocabularies.py
embed_methods/code2vec_spencer/code2vec/JavaExtractor/: extract.py
embed_methods/code2vec_spencer/code2vec/JavaExtractor/JPredict/src/main/java/JavaExtractor/: ExtractFeaturesTask.java
embed_methods/code2vec_spencer/vectors/: convert_vectors.py
embed_methods/ge/: walker.py
embed_methods/ge/models/: deepwalk.py  node2vec.py  struc2vec.py
gnn/: .dockerignore  .gitignore  Dockerfile  README.md  create_commit_file_list.py  create_cw_graph_file_dict.py  create_graph_file_list.py  create_graph_name_vocab.py  create_vocab.py  embed_programs.py  environment.yml  extract_best_submissions.py  fix_graphs.py  main.py  pickle_vocab.py  preprocess.py  requirements.txt  test.py
gnn/gnn/: data_monkey_patch.py  dgcn.py  graph_reader.py  message.py  node2vec.py
gnn/student_metadata/: best_score_data.pkl  grades.pkl  students.pkl
java_snippet_checker/: CompileableCodeStateIds.csv  build.gradle  settings.gradle
java_snippet_checker/src/main/java/edu/ncsu/java_snippet_checker/: CodeState.java  JavaSnippetChecker.java
kappa/: calc_kappa.py  test_tagged_files.csv  test_tags.csv
node_gen_java/: graph_gen_stats.csv  settings.gradle
node_gen_java/app/: build.gradle
node_gen_java/app/src/main/java/edu/ncsu/edm/graphgenerator/: App.java  CodeState.java  CondExprToIfConverter.java  FlowEdge.java  FlowNode.java  LiteralCanonicalizationConverter.java  MainTableEntry.java
node_gen_java/app/src/main/java/edu/ncsu/lab/ast_tagger/: App.java  AstTagger.java  AstToGraphConverter.java  Canonicalizer.java  (+19 more)
schema/: Dockerfile  message.capnp  message.json  message_capnp.rs
schema/codegen/rust/: message_capnp.rs
scripts/: .gitignore  codegen.sh  convert_repo_data.py  count_graphs.sh  extract_data.sh  graphgen.sh  lab4_cb.csv  lab9_cb.csv  pull_repo.py  requirements.txt
vector_creation/: embed_graphs.py
vectors/: saved_model_iter8.release_test  saved_model_iter8.release_train  saved_model_iter8.release_val
(+13 files in other folders)
