[package]
name = "cfg_generator"
version = "0.1.0"
edition = "2021"
authors = ["John Marsden"]
description = "A server that processes incoming length delimited ast node messages into CFGs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
capnpc = "0.14.9"

[dependencies]
# Convenience helpers
error-chain = "0.12.4"
itertools = "0.10.3"
thiserror = "1.0.31"
log = "0.4.17"
clap = { version = "3.2.15", color = true, suggestions = true, features = ["derive"] }

# Stuff for CFG processing
petgraph = { version="0.6.2", features=["stable_graph"] }

# Stuff for server time
bytes = "1.2.0"
tokio = { version = "1.20.1", features = ["net", "full", "io-util"] }
tokio-util = { version = "0.7.3", features = ["codec", "net"] }
tokio-stream = { version = "0.1.9", features = ["net"] }
futures = "0.3.21"
capnp = "0.14.8"