[package]
name = "cfg_generator"
version = "0.1.0"
edition = "2021"
authors = ["John Marsden"]
description = "A server that processes incoming length delimited ast node messages into CFGs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
# Stuff for database connection
cornucopia = "0.8.1"

[dependencies]
# Convenience helpers
anyhow = "1.0.59"
itertools = "0.10.3"
thiserror = "1.0.31"
log = "0.4.17"
log4rs = "1.1.1"
clap = { version = "3.2.15", features = ["derive", "color", "suggestions"] }
once_cell = "1.13.0"

# Stuff for CFG processing
petgraph = { version="0.6.2", features=["stable_graph"] }

# Stuff for server time
bytes = "1.2.0"
tokio = { version = "1.20.1", features = ["net", "full", "io-util"] }
tokio-util = { version = "0.7.3", features = ["codec", "net"] }
tokio-stream = { version = "0.1.9", features = ["net"] }
futures = "0.3.23"
capnp = "0.14.8"


# Stuff for database connection
cornucopia_async = "0.3.1"
dotenvy = "0.15.2"
tokio-postgres = "0.7.7"
postgres-types = { version = "0.2.4", features = ["derive", "postgres-derive"] }
deadpool-postgres = "0.10.2"
config = "0.13.2"