[package]
name = "cfg_generator-fuzz"
version = "0.0.0"
authors = ["John Marsden"]
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]

# For fuzzing purposes
afl = "*"
arbitrary = "1.1.3"
simple-logging = "2.0.2"
log = "0.4.17"

serde_json = "1.0.82"
rand = { version = "0.8.5", features = ["std", "alloc"] }
error-chain = "0.12.4"


# Stuff for server time
bytes = "1.2.0"
tokio = { version = "1.20.1", features = ["net", "full", "io-util"] }
tokio-util = { version = "0.7.3", features = ["codec", "net"] }
tokio-stream = { version = "0.1.9", features = ["net"] }
futures = "0.3.21"

[dependencies.cfg_generator]
path = "../cfg_generator"
features = ["arbitrary"]
